<resources>
    <string name="app_name">알방</string>

    <!-- button -->
    <string name="btn_confirm">확인</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_request">랜드마크 신청하기</string>
    <string name="btn_show_guestbook">방명록 보러가기</string>
    <string name="btn_check_duplicated">중복 확인</string>

    <!-- dialog -->
    <string name="dialog_title_notify">이 방명록을 신고하시겠습니까?</string>
    <string name="dialog_title_delete">이 방명록을 삭제하시겠습니까?</string>
    <string name="dialog_message_review">방명록 내용 : %s</string>
    <string name="dialog_title_finish_notify">신고가 완료되었습니다.</string>
    <string name="dialog_title_finish_delete">삭제가 완료되었습니다.</string>
    <string name="register_nickname_dialog_title">닉네임 등록</string>
    <string name="update_nickname_dialog_title">닉네임 수정</string>
    <string name="nickname_dialog_default_message">취소를 선택하면 이름으로 설정됩니다.</string>
    <string name="nickname_duplicated">이미 사용 중인 닉네임입니다.</string>
    <string name="nickname_available">사용 가능한 닉네임입니다.</string>
    <string name="validate_nickname_title">닉네임 중복확인</string>
    <string name="validate_nickname_fail">닉네임 중복확인 실패</string>
    <string name="logout_confirm_message">로그아웃 하시겠습니까?</string>
    <string name="withdraw_confirm_message">회원탈퇴 하시겠습니까?\n작성하신 방명록과 모든 데이터가 삭제됩니다.</string>
    <string name="logout_fail_title">로그아웃 실패</string>
    <string name="logout_fail_message">로그아웃에 실패했습니다.\n다시 시도해주세요.</string>
    <string name="withdraw_fail_title">회원탈퇴 실패</string>
    <string name="withdraw_fail_message">회원탈퇴에 실패했습니다.\n다시 시도해주세요.</string>
    <string name="dialog_review_add">방명록 추가</string>
    <string name="dialog_explanation">원하는 위치에 방명록을 놓아주세요.</string>

    <!-- content description -->
    <string name="des_ibtn_report">신고</string>
    <string name="des_ibtn_delete">삭제</string>
    <string name="des_iv_heritage">%s 이미지입니다.</string>
    <string name="des_btn_back">뒤로 가기</string>
    <string name="des_fab_review">ar 또는 리스트 화면으로 전환, 방명록 작성, 새로고침 기능을 이용하고 싶으시면 눌러주세요.</string>
    <string name="des_fab_refresh">방명록 새로고침</string>
    <string name="des_fab_ar">ar 화면으로 전환</string>
    <string name="des_fab_list">리스트 화면으로 전환</string>
    <string name="des_fab_add">방명록 작성하기</string>

    <!-- permission -->
    <string name="permission_rational_title">권한 허용</string>
    <string name="permission_rational_message">앱 사용을 위해 카메라와 위치 권한이 필요합니다.</string>
    <string name="permission_rational_button">권한 부여</string>
    <string name="permission_denied_title">권한 거부</string>
    <string name="permission_denied_message">카메라, 위치 권한이 거부되어 앱이 종료됩니다.\n[설정] -> [권한]에서 허용 가능합니다.</string>
    <string name="permission_denied_dialog_message">"앱 사용 필수 권한이 거부되어 앱이 종료됩니다."</string>
    <string name="permission_denied_dialog_button">앱 종료</string>

    <!-- hint -->
    <string name="hint_nickname">닉네임을 입력해주세요.</string>
    <string name="hint_review">방명록을 입력해주세요.</string>

    <!-- login -->
    <string name="login_fail_dialog_title">로그인 실패</string>
    <string name="login_fail_dialog_message">로그인에 실패하였습니다.\n다시 시도해주세요.</string>

    <!-- mypage -->
    <string name="mypage_title">마이페이지</string>
    <string name="mypage_nickname_update">닉네임 변경하기</string>
    <string name="mypage_show_my_guestbook">내가 쓴 방명록 보기</string>
    <string name="notice">공지사항</string>
    <string name="open_source_license">오픈소스 라이선스</string>
    <string name="logout">로그아웃</string>
    <string name="withdraw">회원탈퇴</string>

    <!-- my guestbook -->
    <string name="my_guestbook_title">내가 쓴 방명록</string>
    <string name="delete_guestbook">방명록 삭제</string>
    <string name="delete_my_guestbook_landmark_name">%s에 작성된 방명록</string>
    <string name="delete_my_guestbook_content">&quot;%s&quot;</string>
    <string name="delete_my_guestbook_message">이(가) 삭제됩니다.</string>

    <!-- landmark application -->
    <string name="btn_gallery">갤러리에서 선택하기</string>
    <string name="btn_camera">사진 촬영하기</string>
    <string name="landmark_name_hint">랜드마크 이름을 입력해주세요.</string>
    <string name="location_format">현재위치 위도 : %f, 경도 : %f</string>
    <string name="btn_application">신청하기</string>
    <string name="apply_fail_title">랜드마크 신청 실패</string>
    <string name="apply_fail_message">랜드마크 신청에 실패했습니다.\n잠시 후 다시 시도해주세요.</string>
    <string name="apply_success_title">랜드마크 신청 성공</string>
    <string name="apply_success_message">랜드마크 신청에 성공했습니다.\n검토 후 승인까지 1~2일이 소요됩니다.</string>

</resources>
